--- a/app/views/appeal/s78e/v1/task-list__prepare.html
+++ b/app/views/appeal/s78e/v1/task-list__prepare.html
@@ -81,11 +81,11 @@
     </li>
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="prepare-appeal/procedure" aria-describedby="your-appeal-hint your-appeal-status">
+        <a class="govuk-link govuk-task-list__link" href="prepare-appeal/grounds" aria-describedby="your-appeal-hint your-appeal-status">
           Your appeal
         </a>
         <div id="company-details-3-hint" class="govuk-task-list__hint">
-          Appeal procedure and statement
+          Grounds of appeal and procedure
         </div>
       </div>
       <div class="govuk-task-list__status" id="your-appeal-status">
