Quick fix to meta data for Hearing showing venue address

--- a/app/views/_includes/lpa/meta-full-appeal.html
+++ b/app/views/_includes/lpa/meta-full-appeal.html
@@ -58,7 +58,7 @@
 
     {% if data['venue-address'] == 'complete' %}
 
-       Venue address
+      {% include "/_includes/common/summary-row__venue-address.html" %}
 
     {% endif %}
 
