Content review hearing

--- a/app/views/_includes/common/summary-row__venue-address.html
+++ b/app/views/_includes/common/summary-row__venue-address.html
@@ -14,7 +14,7 @@
 
       {% else %}
 
-        <a href="venue-address?action=">Add venue address</a>
+        <a href="venue-address?action=">Add venue</a>
 
       {% endif %}
 
