--- a/app/views/_includes/lpa/current-appeals.html
+++ b/app/views/_includes/lpa/current-appeals.html
@@ -12,7 +12,7 @@
 
   {% set venuelink %}
     {% if data['venue-address'] != "complete" %}
-      <a href="venue-address">Add venue address</a>
+      <a href="venue-address">Add venue</a>
     {% endif %}
   {% endset %}
 
