--- a/app/views/manage/appeals/v9/appeal-details.html
+++ b/app/views/manage/appeals/v9/appeal-details.html
@@ -95,17 +95,12 @@
         <div class="govuk-notification-banner govuk-!-margin-bottom-6" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
           <div class="govuk-notification-banner__header">
             <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
-              Hearing venue address due
+              Hearing venue due
             </h2>
           </div>
           <div class="govuk-notification-banner__content">
             <p class="govuk-notification-banner__heading">
-              You must add a hearing venue address 11:59pm on {{ 53 | daysInFuture }}
-              <ul class="govuk-list govuk-list--bullet">
-                <li>
-                  <a href="venue-address?action=">Add venue address</a>
-                </li>
-              </ul>
+              <a href="venue-address?action=">Add a hearing venue</a> by 11:59pm on {{ 53 | daysInFuture }}
             </p>
           </div>
         </div>
