--- a/app/views/manage/appeals/v9/venue-address.html
+++ b/app/views/manage/appeals/v9/venue-address.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-appellant-main.html' %}
 
-{% set title = 'What’s the address of the hearing venue?' %}
+{% set title = 'Hearing venue address' %}
 
 {% block questions %}
   {% call govukFieldset({
