--- a/app/views/_includes/lpa/meta-full-appeal.html
+++ b/app/views/_includes/lpa/meta-full-appeal.html
@@ -75,7 +75,7 @@
     {% if data['hearing-date'] == 'complete' %}
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          Hearing date and time
+          Hearing date
         </dt>
         <dd class="govuk-summary-list__value">
           <p class="govuk-body">
@@ -94,7 +94,7 @@
     {% if data['case-conference-date'] == 'complete' %}
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          Case conference date and time
+          Case conference date
         </dt>
         <dd class="govuk-summary-list__value">
           <p class="govuk-body">
@@ -107,7 +107,7 @@
     {% if data['inquiry-date'] == 'complete' %}
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          Inquiry date and time
+          Inquiry date
         </dt>
         <dd class="govuk-summary-list__value">
           <p class="govuk-body">
