--- a/app/views/manage/appeals/v9/venue-address-confirmation.html
+++ b/app/views/manage/appeals/v9/venue-address-confirmation.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
-{% set title = 'Venue address added' %}
+{% set title = 'Venue added' %}
 
 {% block beforeContent %}
   {{ govukPhaseBanner({
@@ -28,15 +28,15 @@
       </h2>
 
       <p class="govuk-body">
-        We will tell the main parties about the hearing venue address.
+        You need to share the hearing venue address with the interested parties. 
       </p>
 
       <p class="govuk-body">
-        You need to tell interested parties about the hearing address.
+        We will send an email to the appellant.
       </p>
 
       <p class="govuk-body">
-        <a href="../../appeals/v9/?venue-address=complete" class="govuk-link--no-visited-state">View your planning appeals</a>
+        <a href="../../appeals/v9/?venue-address=complete" class="govuk-link--no-visited-state">View your appeals</a>
       </p>
 
     </div>
